--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "public": ".",
+  "buildCommand": "echo 'No build step required'",
+  "outputDirectory": ".",
   "env": {
     "OPENAI_API_KEY": "$OPENAI_API_KEY"
   }
